<resources>
    <string name="app_name" translatable="false">Shadow of Roles</string>
    <string name="start_game">Start Game</string>
    <string name="game_guide">Game Guide</string>
    <string name="contact">Contact</string>
    <string name="credits">Credits</string>
    <string name="quit">Quit</string>
    <string name="select">"Select"</string>
    <string name="unselect">"Unselect"</string>
    <string name="clear">Clear</string>
    <string name="ai">AI</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="player_name" translatable="false">"{playerName}"</string>
    <string name="player_number">Number: %d</string>
    <string name="day">Day: %d</string>
    <string name="night">Night: %d</string>
    <string name="voting">Voting: %d</string>
    <string name="settings">Settings</string>
    <string name="select_language">Select</string>
    <string name="winner_team_corrupter">Corrupter</string>
    <string name="winner_team_folk">Folk</string>
    <string name="winner_team_assassin">Assassin</string>
    <string name="winner_team_chill_guy">Chill Guy</string>
    <string name="winner_team_clown">Clown</string>
    <string name="winner_team_lore_keeper">Lore Keeper</string>
    <string name="winner_team_text">{team} has won!</string>
    <string name="winner_draw">Game is Draw!</string>
    <string name="credits_text">
        🎮 Game Development Team\n\n
        👑 Lead Developer: Furkan Kırat\n
        🎨 Game Design: Furkan Kırat &amp; Efekan Kul\n
        💻 Coding &amp; Programming: Furkan Kırat &amp; Efekan Kul\n
        🎭 Graphic Design: Furkan Kırat &amp; Efekan Kul\n
        🛠️ Testing &amp; QA: Furkan Kırat, Efekan Kul, Halil Efe Çelik, Enis Taşkın, Ege Eren Ceylan, Fatih Kınacı\n\n

        🌟 Special Thanks\n
        A huge thank you to:\n💡 Halil Efe Çelik, Enis Taşkın, Ege Eren Ceylan, Fatih Kınacı\n
        Your support and contributions have been invaluable!\n\n

        🔧 Development Tools &amp; Resources\n
        ☕ Java – Programming language\n
        🖥️ Android Studio – UI &amp; development\n
        🗂️ GitHub – Version control\n\n

        ❤️ A Special Thanks to Our Players\n
        We deeply appreciate all the players who contributed to the development of this game, provided feedback, and helped shape the experience. Your support means the world to us!\n\n

        📜 License Information\n
        This game is released under the Apache License, Version 2.0.\n
        You are free to use, copy, modify, and distribute this game, even for commercial purposes, under the terms of the license.\n\n
        📄 A copy of the license is available at:\n🔗 https://www.apache.org/licenses/LICENSE-2.0
    </string>
    <string name="contact_text">✨ We\’d love to hear your thoughts!\n\n
⭐ Share your feedback and suggestions.\n\n
📱 Support us by rating on Google Play!
    </string>
    <string name="contact_text1">For any questions or concerns, feel free to reach out using the buttons below. We\'re here to help!</string>
    <string name="ok">OK</string>
    <string name="cancel">"Cancel"</string>
    <string name="quit_message">Do you want to exit?</string>
    <string name="pass_turn">Pass Turn</string>
    <string name="detective_name">Detective</string>
    <string name="detective_abilities">You choose one and see two roles, including that person\'s role</string>
    <string name="detective_attributes">N/A</string>
    <string name="detective_ability_message">Your target\'s role is {roleName1} or {roleName2}</string>
    <string name="observer_name">Observer</string>
    <string name="observer_abilities">At night you can see which team a person belongs to</string>
    <string name="observer_attributes">N/A</string>
    <string name="observer_ability_message">Your target\'s team is: {teamName}</string>
    <string name="soul_binder_name">Soulbinder</string>
    <string name="soul_binder_abilities">You choose someone at night and if they get attacked, you prevent them from dying</string>
    <string name="soul_binder_attributes">N/A</string>
    <string name="stalker_name">Stalker</string>
    <string name="stalker_abilities">You choose a person and see who that person goes to at night</string>
    <string name="stalker_attributes">N/A</string>
    <string name="stalker_ability_message">Your target has visited {playerName} this night!</string>
    <string name="stalker_ability_message_nobody">Your target did not visited anybody this night!</string>
    <string name="psycho_name">Psycho</string>
    <string name="psycho_abilities">Kill one person each night</string>
    <string name="psycho_attributes">N/A</string>
    <string name="psycho_kill_message">You have slain your target successfully</string>
    <string name="psycho_kill_announcement">{playerName} ({roleName}) has been slain by a Psycho</string>
    <string name="dark_revealer_name">Dark Revealer</string>
    <string name="dark_revealer_abilities">At night you see someone\'s role</string>
    <string name="dark_revealer_attributes">N/A</string>
    <string name="dark_revealer_ability_message">Your target\'s role is: {roleName}</string>
    <string name="interrupter_name">Interrupter</string>
    <string name="interrupter_abilities">You can role block someone in the night</string>
    <string name="interrupter_attributes">N/A</string>
    <string name="seal_master_name">Seal Master</string>
    <string name="seal_master_abilities">You can role block someone in the night</string>
    <string name="seal_master_attributes">N/A</string>
    <string name="role_blocked_message">You have been role blocked this night</string>
    <string name="immune_message">Your target is immune</string>
    <string name="rb_immune_message">Someone tried to role block you but you are immune</string>
    <string name="role_block_message">You have role blocked your target</string>
    <string name="assassin_name">Assassin</string>
    <string name="assassin_abilities">Kill one person each night</string>
    <string name="assassin_attributes">You have basic defence and attack, you are immune to role blocking</string>
    <string name="assassin_goal">Kill every folk and corrupter member</string>
    <string name="assassin_kill_message">You have slain your target successfully</string>
    <string name="assassin_kill_announcement">{playerName} ({roleName}) has been slain by an Assassin</string>
    <string name="chill_guy_name">Chill Guy</string>
    <string name="chill_guy_abilities">Just simple person. You do nothing</string>
    <string name="chill_guy_attributes">If you reveal your role you will lose the game</string>
    <string name="chill_guy_goal">Have Fun</string>
    <string name="last_joke_name">Last Joke</string>
    <string name="last_joke_abilities">When you die you will comeback to life and you must kill one player</string>
    <string name="last_joke_attributes">N/A</string>
    <string name="last_joke_kill_message">You have successfully made your last joke to {playerName}</string>
    <string name="last_joke_kill_announcement">Someone make their Last Joke to {playerName} ({roleName})</string>
    <string name="clown_name">Clown</string>
    <string name="clown_abilities">N/A</string>
    <string name="clown_attributes">N/A</string>
    <string name="clown_goal">You have to die at night by someone to win the game</string>
    <string name="disguiser_name">Disguiser</string>
    <string name="disguiser_abilities">Disguise to random role every night but you can\'t know until you use it</string>
    <string name="disguiser_attributes">N/A</string>
    <string name="disguiser_kill_message">You have successfully killed your target</string>
    <string name="disguiser_kill_announcement">{playerName} ({roleName}) were killed by someone hiding in the shadows</string>
    <string name="dark_seer_name">Dark Seer</string>
    <string name="dark_seer_abilities">You see the role of two living people, but you cannot see the role owner</string>
    <string name="dark_seer_attributes">N/A</string>
    <string name="dark_seer_ability_message">The roles of the two currently living player in the play are: {roleName1} and {roleName2}</string>
    <string name="dark_seer_ability_message_one_left">The role of the currently living person in the play is: {roleName}</string>
    <string name="dark_seer_ability_message_no_left">There are not any players to see their role</string>
    <string name="blinder_name">Blinder</string>
    <string name="blinder_abilities">When you blind someone that player perform their ability randomly</string>
    <string name="blinder_attributes">N/A</string>
    <string name="blinder_ability_message">You have successfully blinded your target</string>
    <string name="got_blinded_message">You are blinded this night</string>
    <string name="folk_hero_name">Folk Hero</string>
    <string name="folk_hero_abilities">You make people immune others cannot visit your target</string>
    <string name="folk_hero_attributes">You can use your ability twice in a game</string>
    <string name="folk_hero_ability_message">You have successfully immunized your target</string>
    <string name="folk_hero_remaining_ability_count">Remaining Ability Count: %d</string>
    <string name="folk_hero_expected_ability_count">Expected Ability Count: %d</string>
    <string name="entrepreneur_name">Entrepreneur</string>
    <string name="entrepreneur_attributes">You get 2 coins every day</string>
    <string name="entrepreneur_abilities">You have some money, you can get other people to do work with this money.</string>
    <string name="entrepreneur_current_money">Current Money: %d</string>
    <string name="entrepreneur_expected_money">\nExpected Money: %d</string>
    <string name="money_insufficient">\nMoney insufficient</string>
    <string name="entrepreneur_selected">Selected Ability: %s</string>
    <string name="entrepreneur_attack">Attack</string>
    <string name="entrepreneur_heal">Heal</string>
    <string name="entrepreneur_info">Info</string>
    <string name="entrepreneur_none">Pass</string>
    <string name="entrepreneur_cost">Cost: %d</string>
    <string name="entrepreneur_kill_message">You have slain your target successfully</string>
    <string name="entrepreneur_kill_announcement">{playerName} ({roleName}) has been slain by an Entrepreneur</string>
    <string name="lore_keeper_name">Lore Keeper</string>
    <string name="lore_keeper_attributes">If the number of players in the game is 7 or less, you need to correctly guess the role of 2 players, if more, you need to guess the role of 3 players</string>
    <string name="lore_keeper_abilities">You choose a player and then you choose what role that player has, if you find it correctly player\'s role will be revealed.</string>
    <string name="lore_keeper_goal">You try to guess the players\' roles</string>
    <string name="lore_keeper_ability_message">The following player has revealed: {playerName} ({roleName})</string>
    <string name="lore_keeper_guess">Your true guess count is: {guessCount}</string>
    <string name="lore_keeper_guessed_role">Selected role: %s</string>
    <string name="lore_keeper_guessed_role_none">No role selected!</string>
    <string name="lore_keeper_winning_true_guess_count">You have to guess %d roles correctly to win!</string>
    <string name="lore_keeper_current_true_guess_count">You have guessed %d roles currently!</string>
    <string name="role_book_neutral">Neutral</string>
    <string name="language">Language</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="google_play" translatable="false">Google Play</string>
    <string name="mail" translatable="false">Mail</string>
    <string name="tooltip_username">Enter your username. It will be used to identify you in the game.</string>
    <string name="tooltip_language">Select your preferred language for the game interface.</string>
    <string name="username">Name</string>
</resources>