<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lorekeeper_box"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/text_background">



    <Spinner
        android:id="@+id/lorekeeper_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:dropDownHeight="200dp"
        android:background="@android:color/transparent"
        android:popupBackground="@android:color/transparent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/role_select_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:layout_below="@id/lorekeeper_spinner"
        android:layout_alignParentStart="true"
        android:background="@drawable/button_style"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/role_select_none_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_alignTop="@id/role_select_button"
        android:layout_toEndOf="@id/role_select_button"
        android:background="@drawable/button_style"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/selected_role_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/role_select_button"
        android:text="@string/lore_keeper_guessed_role"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/winning_guess_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selected_role_text"
        android:text="@string/lore_keeper_current_true_guess_count"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/remaining_winning_guess_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/winning_guess_count"
        android:text="@string/lore_keeper_winning_true_guess_count"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"/>

</RelativeLayout>
