<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImageGame2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="Background Image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background0" />

    <RelativeLayout
        android:id="@+id/playerRoleInfoLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/text_background"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundImageGame2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222">

        <TextView
            android:id="@+id/attributesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/abilityText"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/assassin_attributes"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/abilityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/goalText"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/assassin_abilities"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/goalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/teamText"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/assassin_goal"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/teamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/role_book_neutral"
            android:textColor="@color/white" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>