<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/close_contact_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/closing_button"
        android:gravity="center"
        android:text="X"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/contact_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha="0.9"
        android:src="@drawable/background0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/contactText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/text_background"
        android:text="@string/contact_text1"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/contactText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/text_background"
        android:text="@string/contact_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/gitBtn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/contact_button_background"
            android:backgroundTint="#92FFFFFF"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:visibility="visible"
            app:srcCompat="@drawable/githublogo"
            android:contentDescription="@string/github"
            android:tooltipText="@string/github"/>

        <ImageButton
            android:id="@+id/storeBtn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/contact_button_background"
            android:backgroundTint="#92FFFFFF"
            android:padding="15dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/googleplaylogo"
            android:contentDescription="@string/google_play"
            android:tooltipText="@string/google_play"/>

        <ImageButton
            android:id="@+id/mailBtn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/contact_button_background"
            android:backgroundTint="#92FFFFFF"
            android:padding="1dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/maillogo"
            android:contentDescription="@string/mail"
            android:tooltipText="@string/mail"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>